--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
+        pip install aiohttp asyncio
+        
     - name: Run Waystones Conversion
       run: python markdowncon.py
