--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,19 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: wherethehellimat
+      run: |
+        ls
+        echo "---"
+        ls ../
+        echo "---"
+        ls ../..
+        echo "---"
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install aiohttp asyncio
+        pip install -r requirements.txt
         
     - name: Run Waystones Conversion
       run: python markdowncon.py
