--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         ls
         echo "---"
-        cd ./hynse-classic/
+        cd ../hynse-classic/
 
     - name: Install dependencies
       run: |
