--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,15 +17,12 @@ jobs:
 
     - name: Debug Repository Contents
       run: |
-        ls -R
+        ls -R $GITHUB_WORKSPACE
         echo "---"
-        cd ../hynse-classic/
+        cd $GITHUB_WORKSPACE
         ls -R
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: Run Waystones Conversion
-      run: python markdowncon.py
+        pip install -r
