--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r
+        pip install -r requirements.txt
+        
+    - name: Run Waystones Conversion
+      run: python markdowncon.py
