--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,19 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Set up curl
-      run: |
-        apt install curl
+
+    - name: Install curl
+      run: sudo apt-get update && sudo apt-get install -y curl
+
     - name: Get files
       run: |
         curl -OL https://raw.githubusercontent.com/MidnightTale/hynse-classic/main/requirements.txt
         curl -OL https://raw.githubusercontent.com/MidnightTale/hynse-classic/main/waystones.json
         curl -OL https://raw.githubusercontent.com/MidnightTale/hynse-classic/main/markdowncon.py
-        
+
     - name: Debug Repository Contents
       run: |
         ls -R $GITHUB_WORKSPACE
@@ -34,6 +38,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+
     - name: Run Waystones Conversion
       run: python markdowncon.py
